# Collar

./: .gitignore  Cargo.toml  LICENSE  README.md  collar.example.toml  server.example.toml  shell.nix
collar-common/: Cargo.toml
collar-common/examples/: test_msg.rs
collar-common/src/: lib.rs
collar-daemon/: Cargo.toml
collar-daemon/src/: config.rs  connection.rs  executor.rs  main.rs  scripts.rs
collar-homebridge/: README.md  config.schema.json  package-lock.json  package.json  tsconfig.json
collar-homebridge/src/: client.ts  device-accessory.ts  index.ts  platform.ts  services.ts  settings.ts  types.ts  wol.ts
collar-server/: Cargo.toml
collar-server/src/: api.rs  auth.rs  config.rs  homekit.rs  main.rs  persistence.rs  ratelimit.rs  state.rs  ws.rs
collar-web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
collar-web/src/: App.tsx  api.ts  styles.css  types.ts
collar-web/src/components/: DeviceCard.tsx  DevicePanel.tsx  ScriptButton.tsx  StatusBadge.tsx
collar-web/src/hooks/: useAuth.tsx  useDevices.ts
collar-web/src/pages/: Dashboard.tsx  Login.tsx
deploy/: collar-daemon.service  collar-server.service  collar-web.service  install-daemon.sh  start.sh
deploy/nginx/: collar.conf
docs/: ARCHITECTURE.md  HOMEKIT.md
