[workspace]
resolver = "2"
members = [
    "collar-common",
    "collar-daemon",
    "collar-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["You"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP/API
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
cookie = { version = "0.18", features = ["secure"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
