[package]
name = "collar-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
collar-common = { path = "../collar-common" }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
