[package]
name = "collar-server"
version.workspace = true
edition.workspace = true

[dependencies]
collar-common = { path = "../collar-common" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

dashmap = "5"
cookie = { workspace = true }
subtle = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
